--- a/index.ipynb
+++ b/index.ipynb
@@ -1141,7 +1141,7 @@
    "outputs": [],
    "source": [
     "def distance_between_neighbors_squared(first_neighbor, second_neighbor):\n",
-    "    x=street_dis\n",
+    "    x=street_distance(first_neighbor,second_nei)\n",
     "\n"
    ]
   },
