Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -1142,7 +1142,7 @@
    "source": [
     "def distance_between_neighbors_squared(first_neighbor, second_neighbor):\n",
     "    x=street_distance(first_neighbor,second_neighbor)\n",
-    "    y=\n",
+    "    y=avenue_distance(first_neighbor,second_neighbor)\n",
     "\n"
    ]
   },
