--- a/index.ipynb
+++ b/index.ipynb
@@ -1143,7 +1143,7 @@
     "def distance_between_neighbors_squared(first_neighbor, second_neighbor):\n",
     "    x=street_distance(first_neighbor,second_neighbor)\n",
     "    y=avenue_distance(first_neighbor,second_neighbor)\n",
-    "    return ((x))\n",
+    "    return ((x**2)+(y))\n",
     "\n"
    ]
   },
