--- a/index.ipynb
+++ b/index.ipynb
@@ -1134,26 +1134,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 122,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 11,
+   "metadata": {},
    "outputs": [],
    "source": [
     "def distance_between_neighbors_squared(first_neighbor, second_neighbor):\n",
     "    x=street_distance(first_neighbor,second_neighbor)\n",
     "    y=avenue_distance(first_neighbor,second_neighbor)\n",
-    "    return ((x**2)+(y**2))**(1/2)\n",
+    "    return ((x**2)+(y**2))\n",
     "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 123,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "4.123105625617661"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "distance_between_neighbors_squared(fred, natalie) # 17"
    ]
