--- a/index.ipynb
+++ b/index.ipynb
@@ -1189,7 +1189,7 @@
    "source": [
     "import math\n",
     "def distance(first_neighbor, second_neighbor):\n",
-    "    pass"
+    "def distance_between_neighbors_squared(first_neighbor, second_neighbor):\n"
    ]
   },
   {
