--- a/index.ipynb
+++ b/index.ipynb
@@ -1189,7 +1189,8 @@
    "source": [
     "import math\n",
     "def distance(first_neighbor, second_neighbor):\n",
-    "    c2=distance_between_neighbors_squared(first_neighbor, second_neighbor):\n"
+    "    c2=distance_between_neighbors_squared(first_neighbor, second_neighbor):\n",
+    "    return (c2)**()"
    ]
   },
   {
