--- a/index.ipynb
+++ b/index.ipynb
@@ -1181,16 +1181,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "invalid syntax (<ipython-input-15-c4cb6e01723b>, line 3)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-15-c4cb6e01723b>\"\u001b[0;36m, line \u001b[0;32m3\u001b[0m\n\u001b[0;31m    c2=distance_between_neighbors_squared(first_neighbor, second_neighbor):\u001b[0m\n\u001b[0m                                                                          ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
+     ]
+    }
+   ],
    "source": [
     "import math\n",
     "def distance(first_neighbor, second_neighbor):\n",
     "    c2=distance_between_neighbors_squared(first_neighbor, second_neighbor):\n",
-    "    return (c2)**()"
+    "    return (c2)**(.5)"
    ]
   },
   {
