--- a/index.ipynb
+++ b/index.ipynb
@@ -1284,6 +1284,7 @@
     "import math\n",
     "def distance_with_neighbor(first_neighbor, second_neighbor):\n",
     "    distances={}\n",
+    "    distance\n",
     "    \n",
     "\n",
     "\n",
