Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -1284,7 +1284,7 @@
     "import math\n",
     "def distance_with_neighbor(first_neighbor, second_neighbor):\n",
     "    distances={}\n",
-    "    distance\n",
+    "    distances['avenue']=ave\n",
     "    \n",
     "\n",
     "\n",
