--- a/index.ipynb
+++ b/index.ipynb
@@ -1284,7 +1284,7 @@
     "import math\n",
     "def distance_with_neighbor(first_neighbor, second_neighbor):\n",
     "    distances={}\n",
-    "    distances['avenue']=avenue_distances(first_neighbor, second_neighbor)\n",
+    "    distances['avenue']=ne\n",
     "    \n",
     "\n",
     "\n",
