--- a/index.ipynb
+++ b/index.ipynb
@@ -1284,7 +1284,8 @@
     "import math\n",
     "def distance_with_neighbor(first_neighbor, second_neighbor):\n",
     "    distances={}\n",
-    "    distances['avenue']=ne\n",
+    "    distances['avenue']=second_neighbor['avenue']\n",
+    "    \n",
     "    \n",
     "\n",
     "\n",
