--- a/index.ipynb
+++ b/index.ipynb
@@ -1285,7 +1285,7 @@
     "def distance_with_neighbor(first_neighbor, second_neighbor):\n",
     "    distances={}\n",
     "    distances['avenue']=second_neighbor['avenue']\n",
-    "    \n",
+    "    distances['distance']\n",
     "    \n",
     "\n",
     "\n",
