Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -1287,13 +1287,8 @@
     "    distances['avenue']=second_neighbor['avenue']\n",
     "    distances['distance']=distance(first_neighbor,second_neighbor)\n",
     "    distances['name']=second_neighbor['name']\n",
-    "    distances['street']=second_neighbor['avenue']\n",
-    "\n",
-    "    \n",
-    "\n",
-    "\n",
-    "\n",
-    "\n"
+    "    distances['street']=second_neighbor['street']\n",
+    "    return"
    ]
   },
   {
