--- a/index.ipynb
+++ b/index.ipynb
@@ -1275,10 +1275,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 130,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 19,
+   "metadata": {},
    "outputs": [],
    "source": [
     "import math\n",
@@ -1288,16 +1286,25 @@
     "    distances['distance']=distance(first_neighbor,second_neighbor)\n",
     "    distances['name']=second_neighbor['name']\n",
     "    distances['street']=second_neighbor['street']\n",
-    "    return"
+    "    return distances"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 131,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'avenue': 5, 'distance': 4.123105625617661, 'name': 'Natalie', 'street': 4}"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "distance_with_neighbor(fred, natalie)\n",
     "# {'avenue': 5, 'distance': 4.123105625617661, 'name': 'Natalie', 'street': 4}"
