--- a/index.ipynb
+++ b/index.ipynb
@@ -1326,7 +1326,8 @@
    "outputs": [],
    "source": [
     "def distance_all(first_neighbor, neighbors):\n",
-    "    distances_with_all"
+    "    distances_with_all=[]\n",
+    "    for"
    ]
   },
   {
