Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -1327,7 +1327,8 @@
    "source": [
     "def distance_all(first_neighbor, neighbors):\n",
     "    distances_with_all=[]\n",
-    "    for"
+    "    for n in neighbor:\n",
+    "        dist"
    ]
   },
   {
