Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -1328,7 +1328,7 @@
     "def distance_all(first_neighbor, neighbors):\n",
     "    distances_with_all=[]\n",
     "    for n in neighbor:\n",
-    "        distances_with_all.append(distance_with_neighbor(first))"
+    "        distances_with_all.append(distance_with_neighbor(first_neighbor,n))"
    ]
   },
   {
