Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -1329,7 +1329,7 @@
     "    distances_with_all=[]\n",
     "    for n in neighbor:\n",
     "        distances_with_all.append(distance_with_neighbor(first_neighbor,n))\n",
-    "    re"
+    "    return distances_wit"
    ]
   },
   {
