Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -1319,25 +1319,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 132,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 21,
+   "metadata": {},
    "outputs": [],
    "source": [
     "def distance_all(first_neighbor, neighbors):\n",
     "    distances_with_all=[]\n",
     "    for n in neighbor:\n",
     "        distances_with_all.append(distance_with_neighbor(first_neighbor,n))\n",
-    "    return distances_wit"
+    "    return distances_with_all[1:]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 133,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": null,
+   "metadata": {},
    "outputs": [],
    "source": [
     "distance_all(fred, neighbors)\n",
