Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -1319,16 +1319,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 23,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "invalid syntax (<ipython-input-23-3d9fc7182fff>, line 5)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-23-3d9fc7182fff>\"\u001b[0;36m, line \u001b[0;32m5\u001b[0m\n\u001b[0;31m    return distances_with_all[]\u001b[0m\n\u001b[0m                              ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
+     ]
+    }
+   ],
    "source": [
     "def distance_all(first_neighbor, neighbors):\n",
     "    distances_with_all=[]\n",
     "    for n in neighbor:\n",
-    "        value\n",
     "        distances_with_all.append(distance_with_neighbor(first_neighbor,n))\n",
-    "    return distances_with_all[1:]"
+    "    return distances_with_all[]"
    ]
   },
   {
