--- a/index.ipynb
+++ b/index.ipynb
@@ -1319,29 +1319,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
     "def distance_all(first_neighbor, neighbors):\n",
     "    distances_with_all=[]\n",
     "    for n in neighbors:\n",
-    "        distance_with_neighbor(first_neighbor,n)\n",
+    "        distances_with_all.append(distance_with_neighbor(first_neighbor,n))\n",
     "    return distances_with_all"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[]"
+       "[{'avenue': 4, 'distance': 0.0, 'name': 'Fred', 'street': 8},\n",
+       " {'avenue': 1, 'distance': 4.242640687119285, 'name': 'Suzie', 'street': 11},\n",
+       " {'avenue': 5, 'distance': 1.0, 'name': 'Bob', 'street': 8},\n",
+       " {'avenue': 6, 'distance': 5.385164807134504, 'name': 'Edgar', 'street': 13},\n",
+       " {'avenue': 3, 'distance': 2.23606797749979, 'name': 'Steven', 'street': 6},\n",
+       " {'avenue': 5, 'distance': 4.123105625617661, 'name': 'Natalie', 'street': 4}]"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
