--- a/index.ipynb
+++ b/index.ipynb
@@ -1319,7 +1319,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1327,26 +1327,25 @@
     "    distances_with_all=[]\n",
     "    for n in neighbors:\n",
     "        distances_with_all.append(distance_with_neighbor(first_neighbor,n))\n",
-    "    return distances_with_all"
+    "    return distances_with_all[1:]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[{'avenue': 4, 'distance': 0.0, 'name': 'Fred', 'street': 8},\n",
-       " {'avenue': 1, 'distance': 4.242640687119285, 'name': 'Suzie', 'street': 11},\n",
+       "[{'avenue': 1, 'distance': 4.242640687119285, 'name': 'Suzie', 'street': 11},\n",
        " {'avenue': 5, 'distance': 1.0, 'name': 'Bob', 'street': 8},\n",
        " {'avenue': 6, 'distance': 5.385164807134504, 'name': 'Edgar', 'street': 13},\n",
        " {'avenue': 3, 'distance': 2.23606797749979, 'name': 'Steven', 'street': 6},\n",
        " {'avenue': 5, 'distance': 4.123105625617661, 'name': 'Natalie', 'street': 4}]"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 33,
      "metadata": {},
      "output_type": "execute_result"
     }
