Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -1376,7 +1376,7 @@
    "outputs": [],
    "source": [
     "def nearest_neighbors(first_neighbor, neighbors, number = None):\n",
-    "    distan"
+    "    all_neighbors=distance_all"
    ]
   },
   {
