--- a/index.ipynb
+++ b/index.ipynb
@@ -1377,7 +1377,8 @@
    "source": [
     "def nearest_neighbors(first_neighbor, neighbors, number = None):\n",
     "    all_neighbors=distance_all(first_neighbor,neighbors)\n",
-    "    sorted"
+    "    sorted_list=[]\n",
+    "    for "
    ]
   },
   {
