--- a/index.ipynb
+++ b/index.ipynb
@@ -1378,7 +1378,8 @@
     "def nearest_neighbors(first_neighbor, neighbors, number = None):\n",
     "    all_neighbors=distance_all(first_neighbor,neighbors)\n",
     "    sorted_list=[]\n",
-    "    for "
+    "    for n in all_neighbors:\n",
+    "        i"
    ]
   },
   {
