Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -1379,7 +1379,7 @@
     "    all_neighbors=distance_all(first_neighbor,neighbors)\n",
     "    sorted_list=[]\n",
     "    for n in all_neighbors:\n",
-    "        i"
+    "        if all"
    ]
   },
   {
