Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -1369,17 +1369,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 34,
+   "metadata": {},
    "outputs": [],
    "source": [
     "def nearest_neighbors(first_neighbor, neighbors, number = None):\n",
     "    all_neighbors=distance_all(first_neighbor,neighbors)\n",
     "    sorted_list=[]\n",
-    "    for n in all_neighbors:\n",
-    "        if all_nieghbors[n]['distance']"
+    "    all_nieghbors[n]['distance'].sort()"
    ]
   },
   {
