--- a/index.ipynb
+++ b/index.ipynb
@@ -1376,6 +1376,8 @@
     "def nearest_neighbors(first_neighbor, neighbors, number = None):\n",
     "    all_neighbors=distance_all(first_neighbor,neighbors)\n",
     "    sorted_list=[]\n",
+    "    for n in all_neighbors:\n",
+    "        if \n",
     "    return all_neighbors[n]['distance'].sort()"
    ]
   },
