Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -1377,7 +1377,7 @@
     "    all_neighbors=distance_all(first_neighbor,neighbors)\n",
     "    sorted_list=[]\n",
     "    for n in all_neighbors: \n",
-    "        return all_neighbors[n]['distance'].sort()"
+    "        if all_neighbors[n]['distance'].sort("
    ]
   },
   {
