Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -1376,8 +1376,10 @@
     "def nearest_neighbors(first_neighbor, neighbors, number = None):\n",
     "    all_neighbors=distance_all(first_neighbor,neighbors)\n",
     "    sorted_list=[]\n",
+    "    value=None\n",
     "    for n in all_neighbors: \n",
-    "        if all_neighbors[n]['distance']>"
+    "        if all_neighbors[n]['distance']>value:\n",
+    "            "
    ]
   },
   {
