Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -1379,7 +1379,7 @@
     "    value=None\n",
     "    for n in all_neighbors: \n",
     "        if all_neighbors[n]['distance']>value:\n",
-    "            "
+    "            sorted_list.append()"
    ]
   },
   {
