--- a/index.ipynb
+++ b/index.ipynb
@@ -1369,7 +1369,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1379,7 +1379,8 @@
     "    value=None\n",
     "    for n in all_neighbors: \n",
     "        if all_neighbors[n]['distance']>value:\n",
-    "            sorted_list.append()"
+    "            sorted_list.append(all_neighbors[n]['distance'])\n",
+    "            "
    ]
   },
   {
