Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -1380,7 +1380,7 @@
     "    for n in all_neighbors: \n",
     "        if all_neighbors[n]['distance']>value:\n",
     "            sorted_list.append(all_neighbors[n]['distance'])\n",
-    "            "
+    "            value=all_neighbors[n]['distance']"
    ]
   },
   {
