Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -1378,7 +1378,7 @@
     "    sorted_list=[]\n",
     "    value=None\n",
     "    for n in all_neighbors: \n",
-    "        if all_neighbors[n]['distance']>value:\n",
+    "        if n['distance']>value:\n",
     "            sorted_list.append(all_neighbors[n]['distance'])\n",
     "            value=all_neighbors[n]['distance']"
    ]
