Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -1380,7 +1380,8 @@
     "    for n in all_neighbors: \n",
     "        if n['distance']>value:\n",
     "            sorted_list.append(n['distance'])\n",
-    "            value=n['distance']"
+    "            value=n['distance']\n",
+    "    return sorted_l"
    ]
   },
   {
