--- a/index.ipynb
+++ b/index.ipynb
@@ -1369,7 +1369,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1381,14 +1381,25 @@
     "        if n['distance']>value:\n",
     "            sorted_list.append(n['distance'])\n",
     "            value=n['distance']\n",
-    "    return sorted_l"
+    "    return sorted_list"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 49,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[4.242640687119285, 5.385164807134504]"
+      ]
+     },
+     "execution_count": 49,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "nearest_neighbors(fred, neighbors, 2)\n",
     "# [{'avenue': 5, 'distance': 1.0, 'name': 'Bob', 'street': 8},\n",
