--- a/index.ipynb
+++ b/index.ipynb
@@ -1369,7 +1369,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1379,23 +1379,24 @@
     "    value=0\n",
     "    for n in all_neighbors: \n",
     "        if n['distance']>value:\n",
-    "            sorted_list.append(n['distance'])\n",
+    "            sorted_list.append(n)\n",
     "            value=n['distance']\n",
     "    return sorted_list"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[4.242640687119285, 5.385164807134504]"
+       "[{'avenue': 1, 'distance': 4.242640687119285, 'name': 'Suzie', 'street': 11},\n",
+       " {'avenue': 6, 'distance': 5.385164807134504, 'name': 'Edgar', 'street': 13}]"
       ]
      },
-     "execution_count": 49,
+     "execution_count": 51,
      "metadata": {},
      "output_type": "execute_result"
     }
