--- a/index.ipynb
+++ b/index.ipynb
@@ -1374,14 +1374,10 @@
    "outputs": [],
    "source": [
     "def nearest_neighbors(first_neighbor, neighbors, number = None):\n",
-    "    all_neighbors=distance_all(first_neighbor,neighbors)\n",
-    "    sorted_list=[]\n",
-    "    value=0\n",
-    "    for n in all_neighbors: \n",
-    "        if n['distance']>value:\n",
-    "            sorted_list.append(n)\n",
-    "            value=n['distance']\n",
-    "    return sorted_list"
+    "   number = number or len(neighbors) - 1\n",
+    "    neighbor_distances = distance_all(first_neighbor, neighbors)\n",
+    "    sorted_neighbors = sorted(neighbor_distances, key=lambda neighbor: neighbor['distance'])\n",
+    "    return sorted_neighbors[:number]"
    ]
   },
   {
