Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -1369,12 +1369,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [],
    "source": [
     "def nearest_neighbors(first_neighbor, neighbors, number = None):\n",
-    "   number = number or len(neighbors) - 1\n",
+    "    number = number or len(neighbors) - 1\n",
     "    neighbor_distances = distance_all(first_neighbor, neighbors)\n",
     "    sorted_neighbors = sorted(neighbor_distances, key=lambda neighbor: neighbor['distance'])\n",
     "    return sorted_neighbors[:number]"
@@ -1382,17 +1382,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[{'avenue': 1, 'distance': 4.242640687119285, 'name': 'Suzie', 'street': 11},\n",
-       " {'avenue': 6, 'distance': 5.385164807134504, 'name': 'Edgar', 'street': 13}]"
+       "[{'avenue': 5, 'distance': 1.0, 'name': 'Bob', 'street': 8},\n",
+       " {'avenue': 3, 'distance': 2.23606797749979, 'name': 'Steven', 'street': 6}]"
       ]
      },
-     "execution_count": 51,
+     "execution_count": 55,
      "metadata": {},
      "output_type": "execute_result"
     }
